--- a/src/Pages/special-menu/SpecialMenu.css
+++ b/src/Pages/special-menu/SpecialMenu.css
@@ -1,6 +1,132 @@
 .resturent-special-menu{
-    /* display: flex; */
-    /* align-items: center; */
-    /* justify-content: center; */
-    /* padding: 4rem 6rem; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 4rem 6rem;
+    flex-direction: column;
+    background-color: black;
+    color: white;
+}
+.resturent-special-menu-title{
+    margin-bottom: 2rem;
+    text-align: center;
+}
+.resturent-special-menu-title-todays-special-text{
+  font-size: 4rem;
+  line-height: 83.2px;
+  letter-spacing: 0.04em;
+  text-transform: capitalize;
+  color: #DCCA87;
+}
+.resturent-special-menu-list{
+    width: 100%;
+    margin: 2rem 0;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: row;
+}
+.resturent-special-menu-list-wine-beer , .resturent-special-menu-list-cocktails{
+    flex: 1;
+    width: 100%;
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.resturent-special-menu-list-wine-beer-heading,.resturent-special-menu-list-cocktails-heading{
+    font-weight: 600;
+    font-size: 3rem;
+    line-height: 58.5px;
+    letter-spacing: 0.04em;
+    color: white;
+}
+.resturent-special-menu-list-wine-beer-items , .resturent-special-menu-list-items{
+    display: flex;
+    flex-direction: column;
+    margin: 2rem 0;
+    width: 100%;
+}
+.resturent-special-menu-list-wine-beer-img{
+    width: 360px;
+    margin: 0 2rem;
+}
+.resturent-special-menu-list-wine-beer-img img{
+    width: 100%;
+    height: auto;
+}
+@media screen and (min-width: 2000px) {
+    .resturent-special-menu-list-wine-beer-img {
+        width: 650px;
+    }
+
+    .resturent-special-menu-list-wine-beer-img img {
+        height: 920px;
+    }
+}
+@media screen and (max-width: 1280px) {
+    .resturent-special-menu{
+        padding:4rem 4rem ;
+    }
+    .resturent-special-menu-list-wine-beer-img{
+        margin-top: 5px;
+    }
+    .resturent-special-menu-list-wine-beer-heading{
+        font-size: 2.5rem;
+    }
+}
+@media screen and (max-width: 1214px) {
+    .resturent-special-menu{
+        padding:4rem 2rem ;
+    }
+    .resturent-special-menu-list-wine-beer-img{
+        margin-top: 120px;
+    }
+    .resturent-special-menu-list-wine-beer-heading{
+        font-size: 2.5rem;
+    }
+}
+@media screen and (max-width: 1214px) {
+    .resturent-special-menu{
+        padding:4rem 4rem ;
+    }
+    .resturent-special-menu-list-wine-beer-img{
+        margin-top: 5px;
+    }
+    .resturent-special-menu-list-wine-beer-heading{
+        font-size: 2.5rem;
+    }
+}
+@media screen and (max-width: 1150px) {
+    .resturent-special-menu-list{
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
+    .resturent-special-menu-list-wine-beer-img{
+        margin: 3rem 0;
+    }
+}
+@media screen and (min-width: 450px) and (max-width: 800px){
+    .resturent-special-menu{
+        padding:4rem 6rem ;
+    }
+    .resturent-special-menu-list-wine-beer-img{
+        width: 70%;
+        margin-left: -5px;
+        margin-bottom: 2rem;
+    }
+    
+    .resturent-special-menu-list{
+        flex-direction: column;
+    }
+}
+@media screen and (max-width: 650px){
+    .resturent-special-menu{
+        padding:4rem 2rem ;
+    }
+    .resturent-special-menu-list-wine-beer-img{
+        width: 100%;
+        margin-left: -2px;
+    }
 }
